# AISmartFolder

./: .gitignore  README.md  hello.py  llm.py  main.py  pyproject.toml
.cursor/rules/: uv.mdc
src/: __init__.py  notifications.py  smart_folder.py
src/llms/: __init__.py  llama.py  llamastack.py  openaillm.py
tests/: conftest.py  test_llm.py  test_smart_folder.py
